# FerroBabe

./: Cargo.toml  LICENSE  README.md
examples/: disassemble.rs
src/: diagnostic.rs  error.rs  lib.rs  options.rs
src/decode/: mod.rs
src/format/: ferro.rs  mod.rs  opcode.rs
src/input/: mod.rs
src/model/: class.rs  constant.rs  instruction.rs  member.rs  mod.rs  stack_map.rs
