[package]
name = "FerroBabe"
version = "0.1.0"
edition = "2024"
authors = ["Eatgrapes"]
description = "A lightweight Rust library for disassembling Java class files without a JVM."
license = "MIT"
readme = "README.md"
repository = "https://github.com/NyankoDev/FerroBabe"

[lib]
name = "ferro_babe"

[dependencies]
rust-asm = "0.2.1"
thiserror = "2"
