[package]
name = "FerroBabe"
version = "0.1.3"
edition = "2024"
authors = ["Eatgrapes"]
description = "A lightweight Rust library for disassembling Java class files."
license = "MIT"
readme = "README.md"
repository = "https://github.com/NyankoDev/FerroBabe"
documentation = "https://docs.rs/FerroBabe"
categories = ["development-tools", "parser-implementations"]
keywords = ["java", "jvm", "bytecode", "disassembler", "reverse-engineering"]

[lib]
name = "ferro_babe"

[dependencies]
rust-asm = "0.2.1"
thiserror = "2"
